# kusumi-engine

./: .gitignore  .pre-commit-config.yaml  KASUMI_ARCHITECTURE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
config/: default.yaml  local.yaml  prod.yaml  schema.json
ingestion/: go.mod  go.sum
ingestion/api/kasumi/v1/: events.pb.go  events_grpc.pb.go
ingestion/cmd/server/: main.go
ingestion/internal/config/: config.go  config_test.go
ingestion/internal/logger/: logger.go
ingestion/internal/proto_test/: proto_test.go
ingestion/internal/server/: interceptors.go  server.go  server_test.go
proto/: buf.gen.yaml
proto/kasumi/v1/: events.proto
reranking/: CMakeLists.txt  README.md
reranking/include/kasumi/reranking/: version.h
reranking/src/: main.cpp
retrieval/: pyproject.toml
retrieval/kasumi/v1/: events_pb2.py  events_pb2.pyi
retrieval/retrieval/: __init__.py  config.py  logging.py
retrieval/tests/: test_config.py  test_proto_serialization.py
scripts/: generate_synthetic_catalog.py  simulate_clickstream.py
